[package]
name = "cookhub"
version = "0.1.0"
authors = ["Chris Fung <aergonaut@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
juniper = "0.12"
juniper_rocket = "0.3.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve", "diesel_postgres_pool"]
