[package]
name = "cookhub"
version = "0.1.0"
authors = ["Chris Fung <aergonaut@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
juniper = "0.12"
juniper_rocket = "0.3.0"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.9.0"
serde = "1.0.94"
serde_json = "1.0"
failure = "0.1.5"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve", "diesel_postgres_pool", "tera_templates"]
